<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreenActivityFragments.AboutFragmentSlide3">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragAboutSlide3_ivLogo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logotext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragAboutSlide3_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="20dp"
            android:text="@string/fragAboutSlide3_tvTitleText"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragAboutSlide3_ivLogo" />

        <ImageView
            android:id="@+id/fragAboutSlide3_ivSmile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/smiley_icon_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragAboutSlide3_tvTitle" />

        <TextView
            android:id="@+id/fragAboutSlide3_tvSmile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragAboutSlide3_ivSmileText"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fragAboutSlide3_ivSmile"
            app:layout_constraintTop_toTopOf="@+id/fragAboutSlide3_ivSmile" />


        <ImageView
            android:id="@+id/fragAboutSlide3_ivMobile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/iconmobile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragAboutSlide3_ivSmile" />

        <TextView
            android:id="@+id/fragAboutSlide3_tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragAboutSlide3_tvMobileText"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fragAboutSlide3_ivMobile"
            app:layout_constraintTop_toTopOf="@+id/fragAboutSlide3_ivMobile" />

        <ImageView
            android:id="@+id/fragAboutSlide3_ivDownload"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/downloadicon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragAboutSlide3_ivMobile" />

        <TextView
            android:id="@+id/fragAboutSlide3_tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragAboutSlide3_tvDownloadText"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fragAboutSlide3_ivDownload"
            app:layout_constraintTop_toTopOf="@+id/fragAboutSlide3_ivDownload" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>